[project]
name = "confbot"
version = "0.1.0"
description = "Conference paper crawler, keyword generator, and analysis dashboard"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "click>=8.3.1",
    "numpy>=2.3.5",
    "openai>=2.8.1",
    "pandas>=2.3.3",
    "playwright>=1.55.0",
    "plotly>=6.5.0",
    "python-dotenv>=1.2.1",
    "streamlit>=1.51.0",
]

[tool.uv]
package = false
